# quick-pusher

./: .gitignore  README.md  README.zh-CN.md  config.example.json  pyproject.toml
qpush/: __init__.py  __main__.py  cli.py  config.py  engine.py  git.py  models.py  ui.py
tests/: helpers.py  test_cli.py  test_config.py  test_engine.py  test_git.py
