[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quick-pusher"
version = "0.1.0"
description = "Multi-repo sync commit & push CLI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "klein" }]
keywords = ["git", "multi-repo", "monorepo", "push", "commit", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
qpush = "qpush.cli:main"

[tool.setuptools]
packages = ["qpush"]
